fix: OneDev does not respect container memory limit which may cause it to be killed in high memory usage (#1600)